# NGNL

./: CMakeLists.txt
src/: background_grid.h  debug.cpp  ngnl.ui  ngnl_main.cpp  ngnl_window.cpp  ngnl_window.h  utils.cpp  utils.h
